@@ -195,82 +195,3 @@ proc arcorun_commandline_check {} {
    return 0
 }
 
-
-
-
-
-
-#****** check/arcorun_default_queries() **************************************************
-#  NAME
-#    arcorun_default_queries() -- Execute all default queries with arcorun
-#
-#  SYNOPSIS
-#    arcorun_default_queries { } 
-#
-#  FUNCTION
-#     This method executes all default queries of the ARCo web application
-#
-#*******************************************************************************
-proc arcorun_default_queries {} {
-   global CHECK_OUTPUT CHECK_ACT_LEVEL arcorun_output_dir
-   
-   set add_args ""
-   
-   switch -- $CHECK_ACT_LEVEL {
-      0 { ;# xml output no additional params necessary
-         set output_format "xml"
-      }
-      1 { ;# csv output
-        set add_args "-f csv"
-         set output_format "csv"
-      }
-      2 { ;# html output
-        set output_format "html"
-        set add_args "-f html -o $arcorun_output_dir"        
-      }
-      3 { ;# pdf output
-        set output_format "pdf"
-        set add_args "-f pdf"
-      }
-   }
-   puts $CHECK_OUTPUT "Test $output_format output of arcorun"
-   
-   set queries {}
-   lappend queries { "Statistics" }
-   lappend queries { "Average Job Turnaround Time" }
-   lappend queries { "Accounting per Department"  }
-   lappend queries { "Accounting per User" }
-   lappend queries { "Number of Jobs completed" }
-   lappend queries { "Average Job Wait Time"  }
-   lappend queries { "Host Load" }
-   lappend queries { "Accounting per Project" }
-   lappend queries { "Queue Consumables" "-lb variable=slots" }
-   lappend queries { "Job Log" "-lb job_number=1" }
-   
-   set error_count 0
-   foreach query_spec $queries {
-      set query [lindex $query_spec 0]
-      
-      set args "$add_args"
-      set len  [llength $query_spec]
-      for {set i 1} { $i < $len  } {incr i 1} {
-         append args " [lindex $query_spec $i]"
-      }
-      puts $CHECK_OUTPUT "Execute query $query ($args)"
-      set res [arcorun_exec "$args '$query'" output]
-      if { $res != 0 } {
-         add_proc_error "arcorun_default_queries" -1 "Query $query failed:\n $output"
-         incr error_count 1
-      }
-   }
-
-   if { $error_count > 0 } {
-      return -1
-   } else {
-      return 0
-   }
-}
-
-
-
-
